# cuda-quantum

./: CMakeLists.txt
.devcontainer/: Dockerfile
.github/actions/build-cudaq/: action.yml  build_cudaq.sh
.github/actions/check-formatting/: action.yml
.github/actions/get-llvm-build/: action.yml  build_llvm.sh
.github/actions/get-llvm-build-id/: action.yml
.github/workflows/: build_and_test.yml  build_and_test_in_dev_image.yml  build_dev_image.yml  build_test.yml  cleanup_cache.yml  llvm_bump.yml  test.yml
.github/workflows/docker/: Dockerfile  entrypoint.sh
.github/workflows/scripts/: Dockerfile  build_cudaq.sh  build_llvm.sh
cmake/: AddCUDAQ.cmake  cudaq_llvm.cmake
include/cudaq/Optimizer/: InitAllDialects.h
lib/Frontend/nvqpp/: ConvertDecl.cpp  ConvertType.cpp
lib/Optimizer/Builder/: Factory.cpp  Intrinsics.cpp
lib/Optimizer/CodeGen/: CCToLLVM.cpp  ConvertCCToLLVM.cpp  ConvertToQIR.cpp  ConvertToQIRAPI.cpp  ConvertToQIRProfile.cpp  LowerToQIR.cpp  Passes.cpp  PeepholePatterns.inc  QuakeToCodegen.cpp  QuakeToExecMgr.cpp  QuakeToLLVM.cpp  RemoveMeasurements.cpp  ReturnToOutputLog.cpp  (+1 more)
lib/Support/: CMakeLists.txt
python/: CMakeLists.txt
python/cudaq/: __init__.py
python/extension/: CMakeLists.txt  CUDAQuantumExtension.cpp
python/utils/: OpaqueArguments.h  PyTypes.h
runtime/: CMakeLists.txt
runtime/common/: ArgumentConversion.cpp  BaseRemoteRESTQPU.h  JIT.cpp  RunTheKernel.cpp  RuntimeMLIR.cpp  RuntimeMLIRCommonImpl.h
runtime/nvqir/: CircuitSimulator.h  NVQIR.cpp
scripts/: build_llvm.sh  ci_build_llvm.sh  install_toolchain.sh
test/: CMakeLists.txt  lit.site.cfg.py.in
test/AST-Quake/: adjoint-2.cpp
test/Quake/: apply-2.qke  apply_noise_conversion.qke  cast_fold.qke  cc_execution_manager.qke  cse.qke  kernel_exec-1.qke  kernel_exec-2.qke  lambda_kernel_exec.qke  lambda_variable-2.qke  loop_peeling.qke  return_vector.qke  state_prep.qke
tools/cudaq-opt/: CMakeLists.txt
tools/cudaq-quake/: CMakeLists.txt
tools/cudaq-target-conf/: CMakeLists.txt
tools/cudaq-translate/: CMakeLists.txt  cudaq-translate.cpp
tools/qpud/: qpud.cpp
unittests/: CMakeLists.txt
unittests/Optimizer/: CMakeLists.txt
unittests/integration/: qubit_allocation.cpp
unittests/qis/: qarith.cpp  qlogic.cpp
(+198 files in other folders)
